--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,4 +1,7 @@
 @CHARSET "UTF-8";
+html{
+	font-size: 100%
+}
 
 body {
     color: #333333;
@@ -18,11 +21,8 @@ body {
 }
 
 h1 {
-    width: 94%;
-    padding-top: 17px;
-    padding-left: 3%;
     font-size: 24px;
-    color: #eeeeee;
+    display: inline;
 }
 
 h2 {
@@ -112,4 +112,42 @@ tr.row0 {
 
 select {
     height: 30px;
+}
+
+#header_menu {
+    width: 57%;
+    padding-top: 17px;
+    padding-left: 3%;
+    display: inline-block;
+}
+
+#employee_name {
+    color: #cccccc;
+    width: 36%;
+    padding-right: 3%;
+    text-align: right;
+    display: inline-block;
+}
+
+#header a {
+    color: #eeeeee;
+}
+
+h1 a {
+    color: #eeeeee;
+}
+
+.wrapper{
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 0 4%;
+}
+
+.main-nav{
+	display: flex;
+	justify-content: space-between;
+}
+
+.sub-nav{
+	display: flex;
 }
