--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -137,17 +137,23 @@ h1 a {
     color: #eeeeee;
 }
 
-.wrapper{
-	max-width: 1000px;
-	margin: 0 auto;
-	padding: 0 4%;
+table#report_list th {
+    font-weight: bold;
+    padding: 10px 2%;
 }
 
-.main-nav{
-	display: flex;
-	justify-content: space-between;
+table#report_list .report_name {
+    width: 20%;
+    padding: 10px 2%;
+}
+table#report_list .report_date {
+    width: 20%;
 }
 
-.sub-nav{
-	display: flex;
+table#report_list .report_title {
+    width: 37%;
+}
+
+table#report_list .report_action {
+    width: 13%;
 }
